# FreeCAD-CompositesWB

./: .flake8  .gitignore  .gitmodules  CONTEXT.md  README.md  fishnet-draping-workbench-handover.md  freecad-composite-workbench-handover.md  manifest.ini  mould-plan.md  package.xml  plan.md  progress.md  setup.py  task-cs3.md
artifacts/: fishnet-architecture-handover-plan.md
docs/adr/: 0001-hard-fail-gate-blocking-no-shims.md
docs/reports/: 2026-05-29-drape-prd-agent-execution-plan.md  2026-05-29-drape-prd-agent-master-queue.md  2026-05-29-drape-prd-agent-orchestration-runbook.md  2026-05-29-drape-prd-execution-work-plan.md  2026-05-29-drape-subsystem-prd-fishnet-dropin.md  2026-05-30-drapefishnet-cs3-handover.html  2026-05-30-drapefishnet-cs3-handover.md  agent-stage-tracker.md
freecad/Composites/: TestCompositesApp.py  __init__.py  _fishnet.cpp  _fishnet.py  _fishnet_algorithm.cpp  _fishnet_algorithm.inc  _fishnet_algorithm_sections.hpp  _fishnet_algorithm_types.hpp  _fishnet_diagnostics_result.cpp  _fishnet_diagnostics_result.inc  _fishnet_geometry_sampling.cpp  _fishnet_geometry_sampling.inc  _fishnet_relaxation_objective.cpp  _fishnet_relaxation_objective.inc  init_gui.py  runme.py
freecad/CompositesWB/: AlignFibreLCS.py  Command.py  Composite.py  CompositeLaminate.py  CompositeShell.py  FibreCompositeLamina.py  HomogeneousLamina.py  Lamina.py  Laminate.py  Mould.py  PartPlane.py  Seam.py  TestCompositesApp.py  TestCompositesGui.py  TexturePlan.py  TransferLCS.py  VPCompositeBase.py  WrapLCS.py  __init__.py  init_gui.py  requirements.txt  selection_utils.py
(+264 files in other folders)
